added new user/status end point with testcase and api documentation modification
